envs/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ot-knowledge-mcp
  annotations:

spec:
  selector:
    matchLabels:
      app: ot-knowledge-mcp
  template:
    metadata:
      labels:
        app: ot-knowledge-mcp
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: ot-knowledge-mcp
          imagePullPolicy: IfNotPresent
