envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dev
    traefik.ingress.kubernetes.io/custom-response-headers: 'Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:*||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ot-knowledge.apps.dev-01.6cclab.dev
      secretName: ot-knowledge-mcp-dev-tls
  rules:
    - host: ot-knowledge.apps.dev-01.6cclab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ot-knowledge-mcp
                port:
                  name: events
